<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yog.androidarena.ui.things_you_should_know.ThingsYouShouldKnowFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_things_you_should_know" />

    <fragment
        android:id="@+id/navigation_libs"
        android:name="com.yog.androidarena.ui.libs.LibsFragment"
        android:label="@string/title_lib"
        tools:layout="@layout/fragment_libs" />

    <fragment
        android:id="@+id/navigation_articles"
        android:name="com.yog.androidarena.ui.articles.ArticlesFragment"
        android:label="@string/title_articles"
        tools:layout="@layout/fragment_articles" />
</navigation>